<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cam1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cam_1" />
        <item
            android:id="@+id/nav_cam2"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cam_2" />
        <item
            android:id="@+id/nav_cam3"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cam_3" />
        <item
            android:id="@+id/nav_cam4"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cam_4" />
    </group>
</menu>